--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
                 <!-- Chart -->
                 <div class="bg-white rounded-xl shadow-lg p-6">
                     <h3 class="text-lg font-kanit font-bold mb-4">กราฟยอดเงินรวมตามชั้นเรียน</h3>
-                    <canvas id="classChart" width="400" height="200"></canvas>
+                    <div class="relative" style="height: 300px;">
+                        <canvas id="classChart"></canvas>
+                    </div>
                 </div>
             </div>
         <!-- Deposit/Withdraw Section -->
